@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: itos.4.man,v 0.9.2.1 2006/10/10 10:12:38 brian Exp $
+.\" @(#) $Id: itos.4.man,v 0.9.2.2 2006/10/12 20:25:15 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/10/10 10:12:38 $ by $Author: brian $
+.\" Last Modified $Date: 2006/10/12 20:25:15 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: itos.4.man,v $
+.\" Revision 0.9.2.2  2006/10/12 20:25:15  brian
+.\" - manual page fixups for release
+.\"
 .\" Revision 0.9.2.1  2006/10/10 10:12:38  brian
 .\" - added losts of striso files
 .\"
@@ -100,6 +103,16 @@ sort-adjacent-labels
 .\"
 .SH SYNOPSIS
 .PP
+.B #include <stropts.h>
+.HP
+.IB sctp_stream " = open( /dev/sctp_t ", O_RDWR);
+.HP
+.BI ioctl( sctp_stream ", I_PUSH, " \(lqisos\(rq );
+.sp
+.HP
+.IB sctp_stream " = open( /dev/sctp_t ", O_RDWR);
+.HP
+.BI ioctl( sctp_stream ", I_PUSH, " \(lqitos\(rq );
 .\"
 .\"
 .SH DESCRIPTION
@@ -320,8 +333,8 @@ These modules are not implemented.
 These modules are not implemented.
 .\"
 .\"
-.SH FILES
-.PP
+.\".SH FILES
+.\".PP
 .\"
 .\"
 .SH MODULES
