@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: itot.4.man,v 0.9.2.2 2006/10/10 10:44:02 brian Exp $
+.\" @(#) $Id: itot.4.man,v 0.9.2.3 2006/10/12 20:25:15 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/10/10 10:44:02 $ by $Author: brian $
+.\" Last Modified $Date: 2006/10/12 20:25:15 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: itot.4.man,v $
+.\" Revision 0.9.2.3  2006/10/12 20:25:15  brian
+.\" - manual page fixups for release
+.\"
 .\" Revision 0.9.2.2  2006/10/10 10:44:02  brian
 .\" - updates for release, lots of additions and workup
 .\"
@@ -100,6 +103,16 @@ sort-adjacent-labels
 .\"
 .SH SYNOPSIS
 .PP
+.B #include <stropts.h>
+.HP
+.IB tcp_stream " = open( /dev/tcp ", O_RDWR);
+.HP
+.BI ioctl( tcp_stream ", I_PUSH, " \(lqisos\(rq );
+.sp
+.HP
+.IB tcp_stream " = open( /dev/tcp ", O_RDWR);
+.HP
+.BI ioctl( tcp_stream ", I_PUSH, " \(lqitos\(rq );
 .\"
 .\"
 .SH DESCRIPTION
@@ -296,8 +309,8 @@ These modules are not implemented.
 These modules are not implemented.
 .\"
 .\"
-.SH FILES
-.PP
+.\".SH FILES
+.\".PP
 .\"
 .\"
 .SH MODULES
