@@ -1,7 +1,7 @@
 '\" rtp
 .\" -*- nroff -*- vim: ft=nroff nocin nosi
 .\"
-.\" @(#) $Id: ns-tcp.4.man,v 0.9.2.2 2006/10/03 13:52:18 brian Exp $
+.\" @(#) $Id: ns-tcp.4.man,v 0.9.2.3 2006/10/12 20:25:15 brian Exp $
 .\"
 .\" =========================================================================
 .\"
@@ -53,11 +53,14 @@
 .\" 
 .\" =========================================================================
 .\"
-.\" Last Modified $Date: 2006/10/03 13:52:18 $ by $Author: brian $
+.\" Last Modified $Date: 2006/10/12 20:25:15 $ by $Author: brian $
 .\"
 .\" -------------------------------------------------------------------------
 .\"
 .\" $Log: ns-tcp.4.man,v $
+.\" Revision 0.9.2.3  2006/10/12 20:25:15  brian
+.\" - manual page fixups for release
+.\"
 .\" Revision 0.9.2.2  2006/10/03 13:52:18  brian
 .\" - changes to pass make check target
 .\" - added some package config.h files
@@ -97,54 +100,71 @@ sort-adjacent-labels
 .\"
 .SH SYNOPSIS
 .PP
+.B #include <stropts.h>
+.HP
+.IB tcp_stream " = open(" /dev/tcp ", O_RDWR);
+.HP
+.BI ioctl( tcp_stream ", I_PUSH, " \(lq/dev/tcpns\(rq );
 .\"
 .\"
 .SH DESCRIPTION
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH USAGE
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH INTERFACE
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH ADDRESSES
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH OPTIONS
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH PRIMITIVES
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH IOCTLS
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH NOTICES
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH IMPLEMENTATION
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH FILES
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH MODULES
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH DEVICES
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH "SEE ALSO"
@@ -161,18 +181,22 @@ sort-adjacent-labels
 .\"
 .SH BUGS
 .PP
+This module has not been implemented: bugs are being designed.
 .\"
 .\"
 .SH COMPATIBILITY
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH CONFORMANCE
 .PP
+This module has not been implemented.
 .\"
 .\"
 .SH HISTORY
 .PP
+This module has not been implemented.
 .\"
 .\"
 .[
